# learning-c

./: .gitignore  CMakeLists.txt  README.md
.output/: main
c/: quick-test.c
c/args/: add.c  find-pattern.c  miniprintf.c
c/array/: array-1d.c  array-2d.c  array.h  vla  vla.c
c/basics/: hello.cpp
c/data-structure/linkedlist/: linkedlist-test.c  linkedlist.h
c/io/: getchar  scanf-c.c
c/pointers/: const-pointer.cpp  cpointer.cpp
c/pointers/function-pointer/: compare.c  filter-fp.c  filter-no-fp.c  fptr-square.c  op-evaluate-fptr.c  op-evaluate-no-fptr.c  op-evaluate.c
c/scope/: scope.c
c/string/: cstring.c
c/struct/: struct-point.c
cplusplus/io/: io-cin  io-cin.cpp
debugging/: .gdb_history
debugging/basic/: factorial  factorial.cpp
debugging/from-students/: 5.6-2.c  5.6.c  exp.c  jolly-jumpers.c  jolly-jumpers.txt
debugging/memory/: invalid_memory_access.c  memory_leak.c  uninitialization.c
hdu-acm/1-1/: ab-I.c  ab-II.c  ab-III.c  ab-IV.c  ab-V.c  ab-VI.c  ab-VII.c  ab-VIII.c
hdu-acm/1-2/: ab-coming.c  climbing-worm.c  elevator.c  leap.c  quicksum.c  rightmost-digit.c  text-reverse.c  vowel.c
hdu-acm/1-3/: buying-rice.c  fighting-hdu.c  horse-racing.c  sort-zigzag.c
io/: getchar-test  getchar.c  scanf-d.c  scanf-dc.c  scanf-s.c
njucs17-ps-tutorial/1-1-io/: file-copy.c  printf.c
njucs17-ps-tutorial/1-2-josephus/: josephus.c
njucs17-ps-tutorial/1-3-tromino-tiling/: tromino-tiling-vla.c
njucs17-ps-tutorial/1-4-josephus-linkedlist/: linkedlist.h
njucs17-ps-tutorial/1-5-c-fptr-library/: compare.c  filter.c
njucs17-ps-tutorial/io/: file-copy  file-copy-file  printf  scanf  scanf.c
njucs17-ps-tutorial/josephus-linkedlist/: josephus-linkedlist.c  linkedlist.h
njucs17-ps-tutorial/tromino-tiling/: tromino-tiling-vla.c  tromino-tiling.c
oj/: choose-E.cpp  madlib-B.cpp  sum-A.cpp
pointers/dynamic-memory/: mem-alloc.cpp
problems/: josephus.c
problems/dp/: longest-increasing-subsequence.c  longest-monotone-subsequence.c
problems/josephus/: josephus.c
problems/josephus/josephus-linkedlist/: josephus-linkedlist.c
problems/permutation/: all-permutations.c  generate-perms.c
problems/recursion/: hanoi.c  triomino-tiling.c
problems/recursion/tromino-tiling/: tromino-tiling-vla.c  tromino-tiling.c
resources/array/: array.md
resources/io/: cout.md
writing-solid-code/data/: char-arithmetic.c  sizet.c  typedef.c  unsigned-type.c
